#109 [1h] fix java issues